--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,9 @@
     <div>是否自动关闭成功页: <input type="checkbox" name="able" id="able" /></div>
 	<div>支付密码: <input type="password" id="password" name="password" /></div>
     <div>支付延时:<input type="text" name="time" id="time" value=5000 /></div>
-	<hr />
+    <hr />
+    <button id="create">开始创建订单</button>
+    <hr />
     <div>当前已有支付链接数: <span id="number"></span></div>
     <div>支付笔数:<input type="text" name="payNumber" id="payNumber" /></div>
     <button id="doPay">开始支付</button>
